Added Multicas receiving messages

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ Practica\ 6/cliente
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+Practica 6/Cliente
+Practica 6/a.out
